# Flow-Explainer

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.template  pyproject.toml  requirements.txt
backend/django_app/: manage.py
backend/django_app/api/: urls.py  views.py
backend/django_app/mermaid_diagram/: asgi.py  settings.py  urls.py  wsgi.py
backend/langgraph_app/: agent.py  config.py  tools.py
frontend/public/: index.html
frontend/src/: App.css  App.js
src/components/: DiagramViewer.css  DiagramViewer.js  JsonUploader.css  JsonUploader.js
